# the-cpp-abstraction-penalty

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile.in  README.org  README.org.in  ROADMAP.org  build-all-benchmarks-with-meson.py  build-all-benchmarks.py  configure  get_benchmarks.py  meson.build  meson_options.txt
.benchmarks_results/config_details/: clang.txt  gcc.md  mingw-w64.md  msvc2019.md
.benchmarks_results/gcc!clang/: results.org
.benchmarks_results/msvc2019!mingw-w64/: results.org
benchmarks/01-sieve/: CMakeLists.txt  Makefile  Makefile.in  base_makefile.mk  configure  meson.build  ranges_sieve.cpp  raw_sieve.cpp
benchmarks/01-sieve/make-modules/: rules.mk
benchmarks/01-sieve/scripts/: execute-benchmarks.sh  make-plot.sh  make-plots.sh  plot_data.plt
benchmarks/02-formatted-read/: Makefile.in  sscanf_formatted_read.cpp  stringstream_formatted_read.cpp
benchmarks/02-formatted-read/make-modules/: rules.mk  vars.mk
benchmarks/02-formatted-read/scripts/: plot_data.plt
benchmarks/02-formatted_read/: CMakeLists.txt  meson.build  sscanf_formatted_read.cpp  stringstream_formatted_read.cpp
benchmarks/03-trivial-type-copy/: CMakeLists.txt  Makefile  cmake_install.cmake  meson.build  use_memcpy.cpp  use_std_copy.cpp
benchmarks/04-non-trivial-type-copy/: CMakeLists.txt  meson.build  use_for_loop.cpp  use_std_copy.cpp
benchmarks/05-qsort-vs-stl-sort/: CMakeLists.txt  meson.build  qsort.cpp  stl_sort.cpp
benchmarks/06-memcmp-vs-equal/: CMakeLists.txt  meson.build  use_memcmp.cpp  use_std_equal.cpp
benchmarks/07-memset-vs-fill/: CMakeLists.txt  meson.build  use_memcmp.cpp  use_memset.cpp  use_std_equal.cpp  use_std_fill.cpp
benchmarks/07-memset-vs-fill/buildit/: CMakeCache.txt
benchmarks/make-modules/: rules.mk  vars.mk
benchmarks/skip-01-sieve/: CMakeLists.txt  meson.build  raw_sieve.cpp
benchmarks/util/: benchutil.hpp  random_generate.hpp
cmake/: MakeBenchmark.cmake  SubdirList.cmake
config/: configuration_info.md.in
design-documents/: environment-identification.org  machines-benchmarks-run-global-tracking.org  the-cpp-abstraction-penalty.db
native-files/: default-clang.txt  default-gcc.txt  mingw-w64.txt  msvc2019.txt
native-files-windows/: w64-mingw32.txt
plots/assembly/assembly-clang++/: qsort.cpp.s  ranges_sieve.cpp.s  raw_sieve.cpp.s  sscanf_formatted_read.cpp.s  stl_sort.cpp.s  stringstream_formatted_read.cpp.s  use_memcmp.cpp.s  use_memcpy.cpp.s  use_memset.cpp.s  use_std_copy.cpp.s  use_std_equal.cpp.s  use_std_fill.cpp.s
plots/assembly/assembly-g++/: use_for_loop.cpp.s
plots/assembly/assembly-g++-8/: qsort.cpp.s  ranges_sieve.cpp.s  raw_sieve.cpp.s  sscanf_formatted_read.cpp.s  stl_sort.cpp.s  stringstream_formatted_read.cpp.s  use_for_loop.cpp.s  use_memcmp.cpp.s  use_memcpy.cpp.s  use_memset.cpp.s  use_std_copy.cpp.s  use_std_equal.cpp.s  use_std_fill.cpp.s
project-benchmarks-suite/: README.org  README.org.in  meson.build  meson_options.txt
project-benchmarks-suite/.benchmarks_results/gcc!clang/: results.org
project-benchmarks-suite/.benchmarks_results/msvc2019!msvc2019-2/: results.org
project-benchmarks-suite/scripts/: bench_plotter.plt  benchmars_table_generator.py  build-all-benchmarks-with-meson.py  config_details.py  copy_benchmarks_results_to_this_project.py  generate_plots.py  platform_info.py  run_benchmarks_suite.py  util.py  utils.py
project-benchmarks-suite/scripts/benchmarks_environment/: identify_environment.py
scripts/: bench-result.org.in  bench_plotter.plt  input_plot_data_example.txt  plot_data.plt  prepare_compiler_build_dirs.py
